Make nsSliderFrame realize that its grab has been released due to a deactivate, so that it responds to future mouse events (bug 213122).  Also, some general cleanup to nsSliderFrame.  r+sr=dbaron.